# MLproject-with-MLflow-and-AWSEC2

./: README.md  main.py  pyproject.toml  requirement.txt  setup.py  template.py
config/: config.yaml
research/: 01_data_ingestion.ipynb
src/mlProject/utils/: common.py
