[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mlProject"
version = "1.0.0"
description = "A modern Python package for an ML app with MLflow and AWS EC2 integration"
authors = [{name = "Aakash091-dark", email = "sehrawataakash091@gmail.com"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mlflow>=2.19.0",
    "boto3>=1.35.0",
    "scikit-learn>=1.3.0",
    "pandas>=2.0.0",
    "numpy>=1.25.0"
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "black>=23.0", "flake8>=6.0"]
dependencies = [
    "boto3==1.34.69",  # Compatible with aiobotocore
    "botocore==1.34.69",  # Matches boto3 version
    "aiobotocore>=2.12.3,<3.0.0",
    "mlflow>=2.19.0",
    "scikit-learn>=1.3.0",
    "pandas>=2.0.0",
    "numpy>=1.25.0"
]
